# image_segmentation

./: .cproject  .project  CMakeLists.txt
src/: CMakeLists.txt  ClassSegmentation.cpp  ClassSegmentation.h  Segmentation.cpp  Segmentation.h  SegmentsCollection.cpp  SegmentsCollection.h  Threshold.cpp  Threshold.h  main.cpp
tests/: CMakeLists.txt  run.sh
tests/Common/: ImageComparator.h
tests/Segmentation/: CMakeLists.txt  ClassSegmentationTest.cpp  SegmentationTest.cpp  SegmentsCollectionTest.cpp
tests/Threshold/: CMakeLists.txt  HistogramTest.cpp  ImageComparatorTest.cpp  OptimalThresholdTest.cpp  ThresholdTest.cpp  ThresholdTestParameters.cpp
